--- a/prank/index.html
+++ b/prank/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
 
+    <script href="https://unpkg.co/gsap@3/dist/gsap.min.js"></script>
+    <script href="https://assets.codepen.io/16327/ScrambleTextPlugin3.min.js"></script>
+    <script href="https://assets.codepen.io/16327/SplitText3-beta.min.js?b=27"></script>
+    <script href="https://assets.codepen.io/16327/SplitText3-beta.min.js?b=27"></script>
+
     <div class="text-block">
   <p id="it">
     Wake up Shay... secret message here
