--- a/prank/index.html
+++ b/prank/index.html
@@ -6,11 +6,18 @@
     <title>Document</title>
 </head>
 <body>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrambleTextPlugin.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/SplitText.min.js"></script>
 
-    <script src="https://unpkg.co/gsap@3/dist/gsap.min.js"></script>
-    <script src="https://assets.codepen.io/16327/ScrambleTextPlugin3.min.js"></script>
-    <script src="https://assets.codepen.io/16327/SplitText3-beta.min.js?b=27"></script>
-    <script src="https://assets.codepen.io/16327/SplitText3-beta.min.js?b=27"></script>
+<script>
+ // use a script tag or an external JS file
+ document.addEventListener("DOMContentLoaded", (event) => {
+  gsap.registerPlugin(ScrambleTextPlugin,SplitText)
+  // gsap code here!
+ });
+
+</script>
 
     <div class="text-block">
   <p id="it">
